--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
+    "@types/mongoose": "^5.11.97",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "c8": "^7.13.0",
@@ -40,6 +41,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0"
+    "bcrypt": "^5.1.0",
+    "mongoose": "^7.1.0"
   }
 }
