--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.4",
+    "@types/express": "^4.17.17",
     "@types/mocha": "^10.0.1",
     "@types/mongoose": "^5.11.97",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
@@ -42,6 +43,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
     "mongoose": "^7.1.0"
   }
 }
