--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "coverage": "c8 npm test && c8 report --reporter=lcov",
     "doc": "typedoc",
-    "start": "tsc-watch --onSuccess 'node dist/index.js'",
+    "start": "tsc-watch --onSuccess 'node dist/routes/index.js'",
     "test": "NODE_ENV=test mocha",
     "watch": "NODE_ENV=test mocha --watch --watch-extensions ts"
   },
