--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "coverage": "c8 npm test && c8 report --reporter=lcov",
     "doc": "typedoc",
     "start": "tsc-watch --onSuccess 'node dist/index.js'",
-    "test": "NODE_ENV=test mocha",
+    "test": "NODE_ENV=test mocha --exit",
     "watch": "NODE_ENV=test mocha --watch --watch-extensions ts"
   },
   "repository": {
@@ -27,6 +27,7 @@
     "@types/express": "^4.17.17",
     "@types/mocha": "^10.0.1",
     "@types/mongoose": "^5.11.97",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.15",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
@@ -37,6 +38,7 @@
     "eslint-config-prettier": "^8.6.0",
     "mocha": "^10.2.0",
     "prettier": "^2.8.3",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.0",
     "typedoc": "^0.23.25",
