Relational Database Making relations and cascade deletion
Co-authored-by: alu0101048369 <alu0101048369@ull.edu.es>
Co-authored-by: Lucasperezs02 <alu0101399928@ull.edu.es>

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
     "coverage": "c8 npm test && c8 report --reporter=lcov",
     "doc": "typedoc",
-    "start": "tsc-watch --onSuccess 'node dist/index.js'",
     "test": "NODE_ENV=test mocha --exit",
     "watch": "NODE_ENV=test mocha --watch --watch-extensions ts"
   },
